<resources>
    <string name="app_name">Just Java</string>
    <string name="user_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="order">Order</string>
</resources>